Changed regex logic and fixed typos

--- a/Workspace/risk_return_analysis.ipynb
+++ b/Workspace/risk_return_analysis.ipynb
@@ -1804,7 +1804,7 @@
    "source": [
     "\"\"\"\n",
     "Before going further, \n",
-    "I am going to drop all of the 60 null values from rolling method use\n",
+    "I am going to drop all of the 60 null values generated from rolling method use\n",
     "\"\"\"\n",
     "# checking for NaN values\n",
     "tiger_beta_roll_60.isna().sum()\n",
